--- a/DzXMLTable.dproj
+++ b/DzXMLTable.dproj
@@ -144,6 +144,7 @@
         </DelphiCompile>
         <DCCReference Include="DzXMLTable.dcr"/>
         <DCCReference Include="rtl.dcp"/>
+        <DCCReference Include="xmlrtl.dcp"/>
         <DCCReference Include="DzXMLTable.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
